Add npm package for composables

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dependencies": {
         "@inertiajs/vue3": "^2.1.0",
         "@vueuse/core": "^12.8.2",
+        "@zacksmash/vue-open-ai-apps": "^1.0.0",
         "apexcharts": "^5.3.5",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
